<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AuroraDMX</string>
    <string name="menu_settings">Settings</string>
    <string name="Save">Save</string>
    <string name="AddCue">Add Cue</string>
    <string name="ChFull">Full</string>
    <string name="ChPercent">%1$s%%</string>
    <string name="cue">Cue %1$s</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="insert">Insert</string>
    <string name="deletedCue">Deleted </string>
    <string name="Refresh">Refresh</string>

    <!--Error messages-->
    <string name="canNotDeleteWhileFading">Can not delete while fading</string>
    <string name="onlyTwoDec">Only 2 decimal places allowed</string>
    <string name="errNumConv">Error Number Conversion</string>
    <string name="Error">Error</string>
    <string name="cueMustBePos">Cue numbers must be positive</string>
    <string name="dmxRangeError">Fixture Range 1 &#8211; 200</string>
    <string name="waitingOnFade">Waiting on Fade</string>
    <string name="noCuesInChase">No cues in chase, hold to edit</string>
    <string name="errorZeroFade">Fade and wait can not be 0</string>

    <string name="title_activity_EditCueMenu">Edit Cue Menu</string>
    <string name="title_activity_EditChannelMenu">Edit Channel Menu</string>
    <string name="title_activity_ImportFile">Import File</string>
    <string name="dimmer">Dimmer</string>
    <string name="channel">Channel</string>
    <string name="menu_clearPatch">Clear Patch</string>
    <string name="menu_oneToOne">One To One</string>
    <string name="menu_patch">Patch</string>
    <string name="menu_cues">Cues</string>
    <string name="menu_chase">Chase</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>

    <string name="restore_defaults">Restore Defaults</string>
    <string name="title_activity_patch">Patch</string>
    <string name="title_activity_cue">Cue Sheet</string>
    <string name="title_activity_chase">Chase Sheet</string>
    <string name="title_activity_edit_chase">Edit Chase</string>
    <string name="unlock_channels_title">Purchase App</string>
    <string name="unlock_channels_sum">Support the app (all fixtures currently unlocked)</string>
    <string name="dmxRangePurchaseLimit">Free version limited to 5 fixtures</string>
    <string name="errorProcessPurchases">Unable to process purchases currently</string>
    <string name="select_protocol_title">Select DMX protocol</string>
    <string name="pref_header_artnet">ArtNet Server</string>
    <string name="pref_sacn_universe_title">sACN Universe</string>
    <string name="pref_header_sacn">sACN Server</string>
    <string name="pref_header_sacn_unicast">sACN Unicast Server</string>
    <string name="menu_save">Save</string>
    <string name="menu_load">Load</string>
    <string name="menu_share">Share</string>
    <string name="menu_import">Import</string>
    <string name="pref_sacn_unicast_ip_def">192.168.0.0</string>
    <string name="serverUnknown">DMX Server %s Not Found</string>
    <string name="serverName">Server</string>
    <string name="serverNameTip">Server format \'IP:Universe\'</string>
    <string name="confirm_revert">Are you sure you want to revert all settings to their default values?</string>
    <string name="confirm_revert_summary">Revert all settings to their default values.</string>
    <string name="display_value_title">Brightness as Steps</string>
    <string name="display_value_summary">Displays the channel value as 255 steps instead of 100%</string>
    <string name="cancel">Cancel</string>


    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_cue_fade">CueFade</string>
    <string name="pref_header_general">General</string>
    <string name="channel_color_title">Channel Color</string>
    <string name="default_fade">Default cue fade time (sec)</string>
    <string name="number_of_channels">Number of fixtures</string>
    <string name="default_chaseFade">Default fade time on a chase</string>
    <string name="default_chaseWait">Default time for a cue to stay on in a chase</string>
    <string name="r_0_g_0_b_0">R:0 G:0 B:0</string>

    <!-- Defaults -->
    <string name="pref_default_fade_time">5</string>
    <string name="pref_default_channels">20</string>
    <string name="pref_sacn_universe_def">1</string>
    <string name="editLevel">Level</string>

    <!-- dialog_column -->
    <string name="edit_rgb_red">Red</string>
    <string name="edit_rgb_green">Green</string>
    <string name="edit_rgb_blue">Blue</string>
    <string name="edit_fixture_rgb">RGB Fixture</string>
    <string name="channel_park">Park Fixture</string>
    <string name="editName">Name</string>
    <string name="textValuePresets">(Preset 1:10;Preset 2:20;30;40)</string>
    <string name="textRgbValuePresets">(Preset 1:10,300,355;Preset 2:ff0034)</string>

    <!-- dialog_cue -->
    <string name="Fade">Fade (sec) </string>
    <string name="default_level">0</string>
    <string name="cue_save">{fa-save}</string>
    <string name="cue_delete">{fa-trash}</string>
    <string name="cue_insert">{fa-plus-circle}</string>
    <string name="cue_update">{fa-bar-chart}</string>
    <string name="cue_reorder">{fa-list-ol}</string>

    <string name="cannotOpen">Can not open data</string>
    <string name="openedFile">Opened file (unsaved)</string>
    <string name="edit_icon">{fa-pencil}</string>

    <string name="editValuePresets">Preset Values</string>
    <string name="pick_preset">Pick preset value</string>
    <string name="nextCue">{fa-step-forward}</string>

    <!-- dialog_edit_chase_details -->
    <string name="edit_chase_fade_time">Fade Time </string>
    <string name="edit_chase_wait_time">Wait Time </string>
    <string name="edit_chase_color">Button Color </string>
    <string name="chase_color">{fa-paint-brush}</string>
    <string name="fa_eraser">{fa-eraser}</string>
    <string name="chase_menu_reorder">Reorder</string>
</resources>