<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Protocol Selection and Server Sub-menu (Dyamically placed in code) -->
    <ListPreference
        android:defaultValue="#ffd700"
        android:entries="@array/pref_select_protocol_titles"
        android:entryValues="@array/pref_select_protocol_values"
        android:key="select_protocol"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/select_protocol_title"
        android:order="1" />

    <!-- Space for dmx_server_settings with order 2 -->

    <EditTextPreference
        android:defaultValue="@string/pref_default_channels"
        android:inputType="number"
        android:key="channels"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/number_of_channels"
        android:maxLength="3"
        android:order="3" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_fade_time"
        android:inputType="number"
        android:key="fade_up_time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/default_fade"
        android:maxLength="3"
        android:order="4" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_fade_time"
        android:inputType="number"
        android:key="chase_fade_time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/default_chaseFade"
        android:maxLength="3"
        android:order="5" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_fade_time"
        android:inputType="number"
        android:key="chase_wait_time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/default_chaseWait"
        android:maxLength="3"
        android:order="6" />

    <ListPreference
        android:defaultValue="#ffd700"
        android:entries="@array/pref_color_list_titles"
        android:entryValues="@array/pref_color_list_values"
        android:key="channel_color"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/channel_color_title"
        android:order="7" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="channel_display_value"
        android:summary="@string/display_value_summary"
        android:title="@string/display_value_title"
        android:order="8" />

    <Preference android:key="unlock_channels"
            android:summary="@string/unlock_channels_sum"
            android:title="@string/unlock_channels_title"
            android:order="9" />

    <Preference
        android:key="restore_defaults"
        android:summary="@string/confirm_revert_summary"
        android:title="@string/restore_defaults"
        android:order="10" />

</PreferenceScreen>