<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editCueName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" 
            android:maxLength="15">
        </EditText>
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FadeUp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextFadeUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" 
            android:maxLength="3">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FadeDown"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextFadeDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:inputType="number"
            android:maxLength="3">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/cue_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cue_delete"
            android:layout_weight="1"/>

        <Button
            android:text="@string/cue_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cue_insert"
            android:layout_weight="1"/>

        <Button
            android:text="@string/cue_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cue_save"
            android:layout_weight="1"/>

        <Button
            android:text="@string/cue_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cue_update"
            android:layout_weight="1"/>
        <Button
            android:text="@string/cue_reorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cue_reorder"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>